--- a/css/styles.css
+++ b/css/styles.css
@@ -21,13 +21,25 @@ p, .leaflet-popup-content {
     color: green;
 }
 
+.teal {
+    color: #009688
+}
+
+.darkblue {
+    color: darkblue;
+}
+
+.orange {
+    color: orange;
+}
+
 #map {
     flex: 1;
 }
 
 #sidebar {
     width: 300px;
-    padding: 12px 16px;
+    padding: 12px 20px;
 }
 
 #sidebar > *, #area-too-big-warning {
